--- a/CoinGame/app/src/main/AndroidManifest.xml
+++ b/CoinGame/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.GameActivity"></activity>
     </application>
 
 </manifest>
